Btn visibility fix4

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ a {
 @media screen and (min-width: 900px) {
     
     #button-controls {
-        /* visibility: hidden; */
+        visibility: hidden;
     }
     #game-container {
         width: 50rem;
